# operator-aware-world-model-compression

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
checkpoints/: README.md
configs/benchmark/: lewm_suite.yaml
docs/: colab_lewm_tworoom_gpu_sweep.md  colab_training.md  emergency_closed_loop_runbook.md  full_closed_loop_frontier_runbook.md  rank_frontier_plan.md  swm_prejepa_audit_plan.md  workflow.md
docs/results/: tworoom_reference.md
paper/: EfficientAIWriteUpDanielMan.aux  EfficientAIWriteUpDanielMan.fdb_latexmk  EfficientAIWriteUpDanielMan.fls  EfficientAIWriteUpDanielMan.out  OW-WMC.fdb_latexmk  OW-WMC.fls  OW-WMC.tex  compressing-world-models-for-planning.tex
scripts/: README.md  audit_swm_prejepa_checkpoint.py  benchmark_cost_model.py  benchmark_random_baseline.py  benchmark_source_swm_checkpoint.py  build_cem_operator_cache.py  build_dataset_action_operator_cache.py  build_near_elite_operator_cache.py  build_operator_cache.py  check_benchmark_data.py  check_envs.py  check_model_artifacts.py  check_operator_cache.py  check_swm_training_setup.py  compare_same_cache_vs_heldout.py  compress_predictor_activation_svd.py  compress_predictor_weight_svd.py  concat_result_bundles.py  debug_eval_consistency.py  debug_prejepa_batch_shapes.py  debug_teacher_identity.py  diagnose_operator_split.py  distill_operator_cost_kl.py  distill_operator_elite.py  distill_operator_hybrid.py  distill_prediction_only.py  evaluate_operator_crossed_split.py  evaluate_operator_metrics.py  evaluate_prediction_rollout_fidelity.py  export_result_bundle.py  fetch_lewm_datasets.py  inspect_trained_checkpoints.py  phase1_build_windows.py  phase1_collect_rollouts.py  phase1_encode_lewm.py  phase1_inspect_lewm_wrapper.py  phase1_lewm_transition_metrics.py  phase1_load_lewm.py  phase1_visualize_rollout.py  phase2_compress_lewm_predictor_svd.py  (+24 more)
src/oawc/: envs.py  (+3 more)
tests/: test_operator_eval_metrics.py
(+27 files in other folders)
