[project]
name = "operator-aware-world-model-compression"
version = "0.1.0"
description = "Operator-aware compression for world models."
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "stable-worldmodel",
    "numpy",
    "tqdm",
    "pymunk",
    "pygame",
    "opencv-python-headless",
    "shapely",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.8.0",
    "huggingface-hub>=1.14.0",
    "scikit-learn>=1.7.2",
    "zstandard>=0.25.0",
    "stable-pretraining>=0.1.6",
    "datasets>=2.14,<3",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"
